# gdhcp

./: gdhcp.doap  meson.build  meson_options.txt
doc/: gdhcp-docs.sgml  meson.build
examples/: dhcp-server-test.c  dhcp-server-test.py  dhcp-test.c  dhcp-test.py
src/: gdhcp-client.c  gdhcp-common.c  gdhcp-common.h  gdhcp-ipv4ll.c  gdhcp-ipv4ll.h  gdhcp-marshal.list  gdhcp-server.c  gdhcp-unaligned.c  gdhcp-unaligned.h  gdhcp-version.h.in  gdhcp.h  meson.build
